# silent-rs

./: Cargo.toml  LICENSE  README.md
ext/rust-sfml-0.16.0/: Cargo.toml
res/: localization.csv  localization.ods
src/: global_params.rs  main.rs  theme.rs
src/layouts/: connect_layout.rs  main_layout.rs  settings_layout.rs
src/misc/: custom_data_button_controller.rs  custom_slider_controller.rs  custom_text_box_controller.rs  formatter_max_characters.rs  locale_keys.rs  mod.rs
src/services/: config_service.rs  mod.rs  net_service.rs  tcp_packets.rs  udp_packets.rs  user_net_service.rs  user_tcp_service.rs  user_udp_service.rs
src/services/audio_service/: audio_service.rs  mod.rs  voice_player.rs  voice_recorder.rs
src/themes/: default_theme.rs  mod.rs
src/widgets/: chat_list.rs  connected_list.rs  mod.rs  user_info.rs  users_list.rs
