[package]
name = "silent"
version = "1.0.0"
authors = ["Aleksandr \"Flone\" Tretyakov (github.com/Flone-dnb)"]
edition = "2018"
license = "Zlib"

[dependencies]
iced = {version = "0.3.0", features = ["glow", "tokio"]}
iced_native = {version = "0.4.0"}
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["card", "modal", "colors"] }
chrono = "0.4.19"
png = "0.16.8"
opener = "0.4.1"
platform-dirs = "0.3.0"
bytevec = "0.2.0"
futures = "0.3.14"
num-traits = "0.2"
num-derive = "0.3"
rusty_audio = "1.2.1"
system_wide_key_state = "1.1.3"
sfml = {path = "ext/rust-sfml-0.16.0"}
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
num = "0.4.0"