[package]
name = "silent"
version = "2.0.2"
authors = ["Aleksandr \"Flone\" Tretyakov"]
edition = "2018"
license = "MIT"
description = "Lightweight open-source voice chat client written in Rust."
repository = "https://github.com/Flone-dnb/silent-rs"
homepage = "https://github.com/Flone-dnb/silent-rs"
readme = "README.md"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid-shell = {git = "https://github.com/linebender/druid.git"}
opener = "0.5.0"
rdev = "0.5.1"
system_wide_key_state = "1.2.0"
chrono = "0.4.19"
bytevec = "0.2.0"
num-traits = "0.2"
num-derive = "0.3"
sfml = {path = "ext/rust-sfml-0.16.0"}
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
num-bigint = "0.4.2"
notify-rust = "4.5.3"

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
